--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -1,1 +1,34 @@
-This is admin Login
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Login</title>
+</head>
+<body>
+    <div>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div class="alert alert-danger">
+                <ul>
+                    {% for message in messages %}
+                    <li>
+                        {{message}}
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+        {% endwith %}
+
+        
+        <form   method='POST'>
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name" value="John"><br>
+            <label for="password">Password:</label><br>
+            <input type="text" id="password" name="password" value="Doe"><br><br>
+            <input type="submit" value="Submit">
+          </form> 
+    </div>
+</body>
+</html>
