--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -7,19 +7,21 @@
 </head>
 <body>
     <div>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div class="alert alert-danger">
-                <ul>
-                    {% for message in messages %}
-                    <li>
-                        {{message}}
-                    </li>
-                    {% endfor %}
-                </ul>
-            </div>
-        {% endif %}
-        {% endwith %}
+        <div id="flash">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="alert alert-danger">
+                    <ul>
+                        {% for message in messages %}
+                        <li>
+                            {{message}}
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
+            {% endwith %}
+        </div>
 
 
         <form method='POST'>
