--- a/templates/admin_registration.html
+++ b/templates/admin_registration.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Registration</title>
 </head>
+
 <body>
 
-    THis is admin Registration FORM !!
-    
-    
+    <div id="flash">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div class="alert alert-danger">
+                <ul>
+                    {% for message in messages %}
+                    <li>
+                        {{message}}
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+        {% endwith %}
+    </div>
+
+
+        <div>
+            <form action="{{url_for('admin.admin_registration')}}" method="POST">
+                <label for="username">Username:</label><br>
+                <input type="text" id="username" name="username" placeholder="adminUsername" required><br>
+
+                <label for="password">Password:</label><br>
+                <input type="text" id="password" name="password" placeholder="adminPassword" required><br>
+
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email" placeholder="admin@email.admin" required><br>
+
+                <label for="role">Role:</label>
+                <input type="radio" name="role" value="admin" checked><span>Admin</span>
+
+                <br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
