--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
     <div id="button_body">
         <h1>Choose Your Role</h1>
         <div class="button">
-            <button onclick="location.href='#'">Sponsor</button>
+            <button onclick="location.href='/sponsor/login'">Sponsor</button>
             <button onclick="location.href='#'">Influencer</button>
         </div>
     </div>
