feat : Update Campaign

--- a/templates/sponsor_managecampaign.html
+++ b/templates/sponsor_managecampaign.html
@@ -102,8 +102,14 @@
                   <td>{{ data['goals'] }}</td>
                   <td>{{ data['visibility'] }}</td>
                   <td class="action-buttons">
-                      <button class="btn btn-warning btn-sm">Edit</button>
-                      <button class="btn btn-danger btn-sm">Delete</button>
+                    
+                    <button class="btn btn-warning btn-sm" onclick="location.href='/sponsor/managecampaign/editcampaign/{{ data['''campaign_id'''] }}' ">Edit</button>
+                    <!-- DONT PLACE `/` in front of href= 
+                        SO that we will be unser same domain , SPONSOR !
+                    -->
+
+
+                    <button class="btn btn-danger btn-sm">Delete</button>
                   </td>
               </tr>
           {% endfor %}
