feat : Add delete campaign

--- a/templates/sponsor_managecampaign.html
+++ b/templates/sponsor_managecampaign.html
@@ -109,7 +109,7 @@
                     -->
 
 
-                    <button class="btn btn-danger btn-sm">Delete</button>
+                    <button class="btn btn-danger btn-sm" onclick="location.href='/sponsor/managecampaign/deletecampaign/{{ data['''campaign_id'''] }}' " >Delete</button>
                   </td>
               </tr>
           {% endfor %}
