--- a/templates/sponsor_managecampaign.html
+++ b/templates/sponsor_managecampaign.html
@@ -77,6 +77,8 @@
 
         <button class="btn btn-success mb-3" onclick="location.href='/sponsor/managecampaign/addcampaign'">+ Add New Campaign</button>
 
+        
+        {% if campaign_data %}
         <table class="table table-striped table-bordered campaign-list ">
             <thead class="thead-dark">
                 <tr>
@@ -116,6 +118,10 @@
           {% endfor %}
             </tbody>
         </table>
+        {% else %}
+        <h3 style="color: red; font-weight: bold;">No Campaigns to show!!</h3>
+
+      {% endif %}
 
         
     </div>
