feat : Add new AdRequest

--- a/templates/sponsor_addcampaign.html
+++ b/templates/sponsor_addcampaign.html
@@ -70,7 +70,7 @@
 
             <div class="form-group">
                 <label for="campaignbudget">Campaign Budget:</label>
-                <input type="number" class="form-control" id="campaignbudget" name="campaignbudget" required>
+                <input type="number" step="1" min="0" class="form-control" id="campaignbudget" name="campaignbudget" required>
             </div>
 
             <div class="form-group">
