--- a/templates/sponsor_edit_adrequest.html
+++ b/templates/sponsor_edit_adrequest.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sponsor Manage AdResquest</title>
+    <title>Sponsor Edit AdResquest</title>
 
 </head>
+
 
 
 <body>
@@ -36,45 +37,46 @@
     </div>    
     
     <div >
-        <h1>Add New AdRequest !</h1>
+        <h1>Edit AdRequest !</h1>
 
     </div>
 
     <div>
 
-        <form action="{{ url_for('sponsor.add_adrequest') }}" method="POST">
+        <form action="{{ url_for('sponsor.edit_adrequest', adrequest_id=ad_data.ad_request_id) }}" method="POST">
             <label for="campaignid">Campaign ID:</label>
-            <input type="number" step="1" min="0" id="campaignid" name="campaignid" required>
+            <input type="number" step="1" min="0" id="campaignid" name="campaignid"  value={{ad_data.campaign_id}} required>
             <br>
           
             <label for="influencerid">Influencer ID:</label>
-            <input type="number" step="1" min="0" id="influencerid" name="influencerid" required>
+            <input type="number" step="1" min="0" id="influencerid" name="influencerid"  value={{ad_data.influencer_id}} required>
             <br>
           
             <label for="messages">Message:</label>
-            <textarea id="messages" name="messages" required></textarea>
+            <textarea id="messages" name="messages"  required>{{ad_data.messages}}</textarea>
             <br>
           
             <label for="payment_amount">Payment Amount:</label>
-            <input type="number" step="1" min="0" id="payment_amount" name="payment_amount" required>
+            <input type="number" step="1" min="0" id="payment_amount" name="payment_amount"  value ={{ad_data.payment_amount}} required>
             <br>
           
             <label for="requirements">Requirements:</label>
-            <textarea id="requirements" name="requirements" required></textarea>
+            <textarea id="requirements" name="requirements"   required>{{ad_data.requirements}}</textarea>
             <br>
           
             <label for="status">Status:</label>
-            <input type="radio" id="pending" name="status" value="pending" required>
+            <input type="radio" id="pending" name="status" value="pending" {% if ad_data.status == 'pending' %}checked{% endif %} required>
             <label for="pending">Pending</label>
-          
-            <input type="radio" id="accepted" name="status" value="accepted">
+            
+            <input type="radio" id="accepted" name="status" value="accepted" {% if ad_data.status == 'accepted' %}checked{% endif %}>
             <label for="accepted">Accepted</label>
-          
-            <input type="radio" id="rejected" name="status" value="rejected">
+            
+            <input type="radio" id="rejected" name="status" value="rejected" {% if ad_data.status == 'rejected' %}checked{% endif %}>
             <label for="rejected">Rejected</label>
-          
-            <input type="radio" id="negotiation" name="status" value="negotiation">
+            
+            <input type="radio" id="negotiation" name="status" value="negotiation" {% if ad_data.status == 'negotiation' %}checked{% endif %}>
             <label for="negotiation">Negotiation</label>
+            
           
             <br>
           
